<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>px4_ros2_py</name>
    <version>0.0.1</version>
    <description>Python bindings for px4_ros2_cpp</description>
    <maintainer email="beat-kueng@gmx.net">Beat Kueng</maintainer>
    <license>BSD-3-Clause</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <build_depend>pybind11-dev</build_depend>

    <exec_depend>ament_index_python</exec_depend>

    <depend>rclcpp</depend>
    <depend>rclpy</depend>
    <depend>px4_ros2_cpp</depend>

    <test_depend>ament_cmake_pytest</test_depend>
    <test_depend>python3-pytest</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>