<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>example_mode_collision_avoidance_cpp</name>
  <version>0.0.1</version>
  <description>
    Simple waypoint follower mode for PX4.
    Receives waypoints from drone_path_planner and flies to them.
  </description>
  <maintainer email="user@example.com">User</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>px4_ros2_cpp</depend>
  <depend>px4_msgs</depend>
  <depend>eigen3_cmake_module</depend>
  <depend>eigen</depend>
  <depend>drone_path_planner</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
