<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>example_mode_with_rclpy_py</name>
    <version>0.0.1</version>
    <description>Example</description>

    <maintainer email="beat-kueng@gmx.net">Beat Kueng</maintainer>
    <license>BSD-3-Clause</license>

    <exec_depend>px4_ros2_py</exec_depend>
    <exec_depend>rclpy</exec_depend>

    <export>
        <build_type>ament_python</build_type>
    </export>
</package>